Clase 02 - Medidas relativas

--- a/clase_02/index.html
+++ b/clase_02/index.html
@@ -7,6 +7,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1> Medidas Relativas</h1>
+    </header>
+
+    <main>
+        <h2> Título</h2>
+        <div class="box overflow-scroll ">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, quo molestiae. Sint similique fugit accusamus sed laboriosam quia voluptate dolor excepturi delectus at, exercitationem dolore aliquid neque nesciunt deserunt nihil.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugit ea odit. Neque consectetur tenetur odit iste laudantium dicta, sint quam quasi accusantium, reiciendis recusandae similique eos aspernatur beatae eaque!
+            </p>
+        </div>
+
+        <div class="box overflow-auto ">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, quo molestiae. Sint similique fugit accusamus sed laboriosam quia voluptate dolor excepturi delectus at, exercitationem dolore aliquid neque nesciunt deserunt nihil.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugit ea odit. Neque consectetur tenetur odit iste laudantium dicta, sint quam quasi accusantium, reiciendis recusandae similique eos aspernatur beatae eaque!
+            </p>
+        </div>
+        <div class="box overflow-hidden ">
+            <img src="foto.jpg" alt="foto">
+        </div>
+
+        <div class="box overflow-scroll ">
+            <img src="foto.jpg" alt="foto">
+        </div>
+
+        <div class="circle">
+            <img src="foto.jpg" alt="foto">
+
+        </div>
+
+        <div class="circle-mask">
+        </div>
+    </main>
+    <footer>
+        <p> Interacción con dispositivos Móviles | EMAE | 2024</p>
+    </footer>
 </body>
 </html>
